<resources>
    <string name="app_name">AdWorksDemo</string>
    <string name="string_ad_native">原生广告</string>
    <string name="string_native_close">native关闭</string>
    <string name="string_native_load_fail">native加载失败</string>
    <string name="string_native_left_app">native离开应用</string>
    <string name="string_native_open">native打开</string>
    <string name="string_native_loaded">native加载成功</string>
    <string name="string_native_click">native点击</string>
    <string name="string_interstitial_close">插屏关闭</string>
    <string name="string_interstitial_load_fail">插屏加载失败</string>
    <string name="string_interstitial_load_success">插屏加载成功</string>
    <string name="string_interstitial_left_app">插屏离开应用</string>
    <string name="string_interstitial_open">插屏打开</string>
    <string name="string_interstitial_click">插屏点击</string>
    <string name="string_reward_video_close">激励关闭</string>
    <string name="string_reward_video_load_fail">激励加载失败</string>
    <string name="string_reward_video_left_app">激励离开应用</string>
    <string name="string_reward_video_open">激励打开</string>
    <string name="string_reward_video_open_fail">激励展示失败</string>
    <string name="string_reward_video_loaded">激励加载成功</string>
    <string name="string_reward_video_click">激励点击</string>
    <string name="string_reward_video_complete">激励播放完成可以获得奖励！</string>
    <string name="string_banner_close">banner关闭</string>
    <string name="string_banner_load_fail">banner加载失败</string>
    <string name="string_banner_left_app">banner离开应用</string>
    <string name="string_banner_open">banner打开</string>
    <string name="string_banner_loaded">banner加载成功</string>
    <string name="string_banner_click">banner点击</string>
    <string name="string_init_admob">初始化为admob</string>
    <string name="string_init_ironsource">初始化为IronSource</string>
    <string name="string_current_ad_platform">当前初始化广告平台</string>
    <string name="string_ad_interstitial">跳转页面显示插屏</string>
    <string name="string_ad_reward_video">观看激励视频可以获得奖励哦</string>
    <string name="string_ad_banner">显示底部banner</string>
    <string name="web_activity">JSTag测试（忽略）</string>
</resources>